--- a/src/style.css
+++ b/src/style.css
@@ -5,21 +5,19 @@
     padding: 0;
     box-sizing: border-box;
     font-size: 62.5%;
-    border: none;
 }
 
-body {
+#app {
+    width: 100vw;
+    height: 100vh;
+
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100vw;
-    height: 100vh;
-
-
     background: #040924;
 
-    .main {
+    .layoutCalculator {
         display: flex;
         padding: 4.8rem 6.4rem 6.4rem 6.4rem;
         flex-direction: column;
@@ -27,64 +25,79 @@ body {
         gap: 3.2rem;
 
         border-radius: .6rem;
-        background: #FFF;
+        background: #fff;
         box-shadow: 0 .2rem .4rem 0 rgba(0, 0, 0, 0.10);
 
         h1 {
-            color: #0C3440;
-            font-family: Roboto;
+            color: #0c3440;
+            font-family: "Roboto";
             font-size: 3.2rem;
             font-style: normal;
             font-weight: 700;
             line-height: 4rem;
         }
 
-        .campos {
+        .weigth,
+        .heigth {
             display: flex;
             flex-direction: column;
-            align-items: center;
-            gap: 1.6rem;
+            gap: .8rem;
+        }
 
-            .campo {
-                display: flex;
-                flex-direction: column;
-                gap: .8rem;
+        label {
+            color: #00453A;
+            font-family: "Roboto";
+            font-size: 1.4rem;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 1.8rem;
+        }
 
-                label {
-                    color: var(--brand-green-hover, #00453A);
-                    font-family: Roboto;
-                    font-size: 1.4rem;
-                    font-style: normal;
-                    font-weight: 400;
-                    line-height: 1.8rem;
+        input {
+            width: 26.8rem;
+            display: flex;
+            padding: 1.6rem;
+            align-items: flex-start;
+            gap: 1rem;
+            align-self: stretch;
+
+            border-radius: .4rem;
+            border: .1rem solid #02799D;
+            background: #DCE2E9;
+
+            color: rgba(73, 80, 87, 0.50);
+            font-family: "Roboto";
+            font-size: 1.6rem;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 2rem;
+
+            &[type="number"] {
+                -moz-appearance: textfield;
+                appearance: textfield;
+
+                &::-webkit-inner-spin-button,
+                &::-webkit-outer-spin-button {
+                    -webkit-appearance: none;
+                    margin: 0;
                 }
+            }
 
-                input {
-                    width: 30rem;
-                    display: flex;
-                    padding: 1.6rem;
-                    align-items: flex-start;
-                    gap: 1rem;
-                    align-self: stretch;
-
-                    border-radius: .4rem;
-                    border: .1rem solid var(--Brand-Colors-Explorer-mid, #02799D);
-                    background: #DCE2E9;
-
-                    color: var(--Secondary-Colors-gray-headline, #212529);
-                    font-family: Roboto;
-                    font-size: 1.6rem;
-                    font-style: normal;
-                    font-weight: 400;
-                    line-height: 2rem;
-                }
+            &:focus {
+                color: #212529;
+                border: .1rem solid #02799D;
+                outline: 0;
             }
 
         }
 
+        /* .invalid {
+            border: .2rem solid #ff0000;
+        } */
+
         button {
+            width: 26.8rem;
             display: inline-flex;
-            width: 30rem;
             height: 5.2rem;
             padding: 1.6rem;
             justify-content: center;
@@ -93,35 +106,8 @@ body {
             flex-shrink: 0;
 
             border-radius: .4rem;
-            background: var(--Brand-Colors-Explorer-mid, #02799D);
-
-            color: var(--NEUTRAL-White, #FFF);
-            text-align: center;
-            font-family: Roboto;
-            font-size: 1.6rem;
-            font-style: normal;
-            font-weight: 700;
-            line-height: 2rem;
-        }
-
-    }
-
-    .alert {
-        position: absolute;
-        top: 0;
-        
-        display: none;
-
-        padding: .8rem 0 .8rem 0;
-        
-        width: 100vw;
-        height: 3.6rem;
-        
-        background: #F03E3E;
-        
-        span {
-            display: flex;
-            justify-content: center;
+            border: none;
+            background: #02799D;
 
             color: #FFF;
             text-align: center;
@@ -130,54 +116,106 @@ body {
             font-style: normal;
             font-weight: 700;
             line-height: 2rem;
+
+            transition: all .3s ease;
+
+            &::after {
+                content: "";
+                background: url("../assets/arrow-up-right.svg");
+                width: 1.6rem;
+                height: 1.6rem;
+            }
+
+            &:hover {
+                cursor: pointer;
+                scale: 1.01;
+            }
         }
+
     }
 
-    .modal {
+    .alertBox {
         position: absolute;
-        display: none;
-        flex-direction: column;
-        padding: 4.8rem 6.4rem 6.4rem 6.4rem;
-        align-items: flex-end;
-        gap: 1rem;
+        top: 0;
 
-        z-index: 999;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-        border-radius: .6rem;
-        background: #FFF;
-        box-shadow: 0 .2rem .4rem 0 rgba(0, 0, 0, 0.10);
+        width: 100vw;
+        height: 3.6rem;
 
-        img {
-            width: 2.4rem;
-            height: 2.4rem;
-            flex-shrink: 0;
+        background: #F03E3E;
 
-            position: relative;
-            top: -3rem;
-            right: -28rem;
-        }
-
-        p {
-            width: 27rem;
-            color: #0C3440;
-            text-align: center;
-            font-family: Roboto;
-            font-size: 3.2rem;
+        .alertMsg {
+            color: #FFF;
+            font-family: "Roboto";
+            font-size: 1.6rem;
             font-style: normal;
             font-weight: 700;
-            line-height: 4rem;
+            line-height: 2rem;
         }
     }
 
-    .bg {
-        position: absolute;
-        display: none;
+    .backModal {
         width: 100vw;
         height: 100vh;
-        background: rgba(0, 0, 0, 0.70);
-    }
+        position: absolute;
 
-    .show {
-        display: block;
+        background: rgba(0, 0, 0, 0.70);
+
+        .modal {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+
+            display: inline-flex;
+            padding: 4.8rem 6.4rem 6.4rem 6.4rem;
+            align-items: flex-start;
+            gap: 1rem;
+
+            border-radius: .6rem;
+            background: #FFF;
+            box-shadow: 0 .2rem .4rem 0 rgba(0, 0, 0, 0.10);
+
+            .closeModal {
+                width: 2.4rem;
+                height: 2.4rem;
+                background: url("../assets/close.svg");
+
+                position: absolute;
+                top: 1rem;
+                right: 1rem;
+
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                border-radius: 100%;
+
+                font-size: 2.4rem;
+                font-family: "Roboto";
+                font-style: normal;
+                font-weight: 400;
+
+                transition: all .3s ease;
+
+                &:hover {
+                    cursor: pointer;
+                    background-color: rgb(243, 88, 88);
+                }
+            }
+
+            .msgModal {
+                color: #0C3440;
+                text-align: center;
+                font-family: "Roboto";
+                font-size: 3.2rem;
+                font-style: normal;
+                font-weight: 700;
+                line-height: 4rem;
+            }
+        }
     }
 }
